# emacs-rag-libsql

emacs-rag/: emacs-rag-index-async.el  emacs-rag-search.el  emacs-rag-server.el
emacs-rag-server/: .envrc  pyproject.toml
emacs-rag-server/src/emacs_rag_server/: cli.py  main.py
emacs-rag-server/src/emacs_rag_server/api/: routes.py
emacs-rag-server/src/emacs_rag_server/models/: database.py  embeddings.py  reranker.py
emacs-rag-server/src/emacs_rag_server/services/: file_service.py
emacs-rag-server/src/emacs_rag_server/utils/: chunking.py  config.py  org_chunking.py
